Money Manager 26.3.1
* Изменен расчет стоимости ценных бумаг
* JavaFX 26