@@ -1,37 +1,29 @@
 #!/bin/sh
 
+# Copyright © 2026 Petr Panteleyev
+# SPDX-License-Identifier: BSD-2-Clause
 if [ -z "$1" ]
 then
-  echo "Usage: sudo -E install.sh <install dir>"
+  echo "Usage: install.sh <install dir>"
   exit
 fi
 
 LAUNCH_DIR=$(cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd)
-INSTALL_DIR=$1/money-manager
+INSTALL_DIR=$(realpath -m "$1")/money-manager
 
-echo "Installing into $INSTALL_DIR..."
+echo -n "Removing $INSTALL_DIR... "
+rm -rf $INSTALL_DIR
+echo "done"
 
-mkdir -p $INSTALL_DIR/jars
+echo -n "Creating $INSTALL_DIR... "
+mkdir -p $INSTALL_DIR
+echo "done"
 
-rm -f $INSTALL_DIR/jars/*
-cp -f $LAUNCH_DIR/../desktop/app/target/jmods/* $INSTALL_DIR/jars
-cp -f $LAUNCH_DIR/../desktop/icons/icon.png $INSTALL_DIR
+echo -n "Installing into $INSTALL_DIR... "
+cp -r $LAUNCH_DIR/../desktop/app/target/dist/Money\ Manager/* $INSTALL_DIR
+echo "done"
 
-echo "
-#!/bin/sh
-$JAVA_HOME/bin/java --module-path $INSTALL_DIR/jars \\
-  -XX:NewRatio=1 \\
-  -Xms500m \\
-  -Xmx500m \\
-  -XX:+UseCompactObjectHeaders \\
-  --enable-native-access=javafx.graphics \\
-  --sun-misc-unsafe-memory-access=allow \\
-  --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls \\
-  --module org.panteleyev.money/org.panteleyev.money.MoneyApplication \\
-" > $INSTALL_DIR/money-manager.sh
-
-chmod +x $INSTALL_DIR/money-manager.sh
-
+echo -n "Creating desktop entry... "
 echo "[Desktop Entry]
 Type=Application
 Version=1.5
@@ -39,7 +31,8 @@ Name=Money Manager
 Name[ru_RU]=Менеджер финансов
 Comment=Application to manage personal finances
 Comment[ru_RU]=Программа для управления личными финансами
-Icon=$INSTALL_DIR/icon.png
-Exec=/bin/sh $INSTALL_DIR/money-manager.sh
+Icon=$INSTALL_DIR/lib/Money\sManager.png
+Exec=\"$INSTALL_DIR/bin/Money Manager\"
 Categories=Office;Finance;Java;
-" > $INSTALL_DIR/money-manager.desktop
+" > $HOME/.local/share/applications/money-manager.desktop
+echo "done"
